v3.6.2 (XXXX-XX-XX)
-------------------

* Clean out server job checks preconditions plan version unchanged for start.

* Make sure heartbeats are actually sent out and received once per second.

* Make active failover integration tests more stable.

* Include collections "_queues" and "_jobs" in dumps created by arangodump
  in case the option `--include-system-collections` was set to true. Previously
  these collections were always excluded from dumps.

* Fix bug in collection creation with distributeShardsLike.


v3.6.1 (2020-01-29)
-------------------

* Fixed issue #10949: k shortest paths behaviour wrong with zero weights.

* Updated ArangoDB Starter to 0.14.13.

* Added HotBackup events into auditing.

* Internal statistics API now uses integer timestamps instead of doubles. The
  old behavior sometimes leads to failed requests because of parse errors
  which occurred in the internally used JavaScript joi library.

* Fixed issue #10896: Variables defined inside spliced subqueries would leak
  into following COLLECT ... INTO var operations.

* Fixed COLLECT not invalidating variables for following COLLECT ... INTO var
  operations.

* Removed an unnecessary and wrong request from within the Web UI to the
  `/_admin/cluster/health` API. This lead to unauthorized network calls.

* Allowed PHRASE function to process empty arrays without generating error.

* Add acquisition of system report to arangod instances.

* React dev mode now supports hot reload combined with proxy for development.

* Fix issue #10897, using COLLECT in a subquery could lead to unexpected and
  confusing error messages

* Fix potential nullptr dereference in view optimizer rule, when there were was
  a LIMIT outside of a FOR loop.

* Added missing "global" parameter in Swagger REST API documentation for some
  replication endpoints.

* Fixed an edge case in VelocyPack when the padding of a 1-byte offsetSize array
  is removed but the first few entries of the array contain a Slice of type